created scene and renderer

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <title>Jonathan Zavialov</title>
 </head>
 <body>
-  
+  <canvas id="bg"></canvas>
+  <script type="module" src="/main.js"></script>
 </body>
 </html>
